--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "production": "pm2 start index.js --name api-tasks"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +21,8 @@
     "moment": "^2.29.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "pm2": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
